doc(知识学习,个人项目,项目笔记,阅读笔记等):添加,完善许多笔记~
1.新增许多笔记,完善以前的笔记
2.整理归纳笔记及文件夹路径
3.其他修改

--- a/记录/不了解的知识.md
+++ b/记录/不了解的知识.md
@@ -5,3 +5,36 @@
 皮肤科用药，临床上适用于以粉刺、丘疹和脓疱为主要表现的寻常型痤疮的皮肤治疗，亦可用于治疗面部、胸和背部的痤疮
 
 [阿达帕林\_百度百科](https://baike.baidu.com/item/%E9%98%BF%E8%BE%BE%E5%B8%95%E6%9E%97/2548170)
+
+# 现象
+
+### 层流现象
+
+层流（laminar flow）是流体的一种流动状态，它作层状的流动。流体在管内低速流动时呈现为层流，其质点沿着与管轴平行的方向作平滑直线运动。流体的流速在管中心处最大，其近壁处最小。管内流体的平均流速与最大流速之比等于 0.5
+
+[层流\_百度百科](https://baike.baidu.com/item/%E5%B1%82%E6%B5%81/2229875)
+[运动的水流看起来为什么会完全“静止”？\|层流\|湍流\|流体\|流速\_网易订阅](https://www.163.com/dy/article/GKIOOIIE0550FW8P.html)
+[什么是层流现象？流动的水流看起来却是静止的，你知道原理吗\_哔哩哔哩\_bilibili](https://www.bilibili.com/video/BV1oy4y127iW/?share_source=copy_web&vd_source=6edad9242d2299b41526c08a2751da39)
+
+### 照镜子为什么是左右颠倒，而不是上下颠倒
+
+**镜子颠倒的是和镜子垂直的两个方向**
+我们的身体具有左右对称结构，而不是上下对称结构。所以当镜子把我们前后翻转以后，我们的大脑会把人体右边的像判定为是人的左边，把人体左边的像判定为人的右边。因为你的左右是完全对称的，你无法区分这种差异。所以，给我们的感觉就是左右翻转了
+
+[照镜子为什么是左右颠倒，而不是上下颠倒？ - Mandelbrot 的回答 - 知乎 ](https://www.zhihu.com/question/19552727/answer/88522316)
+
+### 加拉帕戈斯现象
+
+指在孤立的市场环境下，独自进行“最适化”，而丧失和区域外的互换性，面对来自外国的适应性和生存能力高的品种，最终陷入被淘汰的危险的现象
+
+[加拉帕戈斯现象\_百度百科](https://baike.baidu.com/item/%E5%8A%A0%E6%8B%89%E5%B8%95%E6%88%88%E6%96%AF%E7%8E%B0%E8%B1%A1/7671814)
+
+# 心理学
+
+### 马太效应
+
+马太效应（Matthew Effect），是指好的愈好，坏的愈坏，多的愈多，少的愈少的一种现象。即两极分化现象
+它描述了一种常见的社会心理现象，即优势往往会产生更多的优势
+
+[马太效应（一种常见的社会心理现象）\_百度百科](https://baike.baidu.com/item/%E9%A9%AC%E5%A4%AA%E6%95%88%E5%BA%94/70100)
+[马太效应 - 知乎](https://www.zhihu.com/topic/19574086/intro)
