--- a/资料收藏/有意思的项目.md
+++ b/资料收藏/有意思的项目.md
@@ -3,3 +3,8 @@
 - [SVP – SmoothVideo Project – Real Time Video Frame Rate Conversion](https://www.svp-team.com/zh/home/)
 - [GitHub - Blinue/Magpie: An all-purpose window upscaler for Windows 10/11.](https://github.com/Blinue/Magpie)
 - [GitHub - bloc97/Anime4K: A High-Quality Real Time Upscaler for Anime Video](https://github.com/bloc97/Anime4K)
+- [GitHub - Stability-AI/generative-models: Generative Models by Stability AI](https://github.com/Stability-AI/generative-models)
+
+# 工具类项目
+
+[GitHub - skywind3000/awesome-cheatsheets: 超级速查表 - 编程语言、框架和开发工具的速查表，单个文件包含一切你需要知道的东西 :zap:](https://github.com/skywind3000/awesome-cheatsheets)
