--- a/资料收藏/通信.md
+++ b/资料收藏/通信.md
@@ -1,1 +1,3 @@
 [多径信道冲激响应 - MayeZhang - 博客园](https://www.cnblogs.com/MayeZhang/p/16117917.html)
+
+[Communication Technology \| ShareTechnote](https://www.sharetechnote.com/html/Handbook_Communication_Index.html)
