--- a/知识学习/芯片开发/芯片开发学习.md
+++ b/知识学习/芯片开发/芯片开发学习.md
@@ -40,3 +40,7 @@
 两个触发器(FF)组成的电路
 ![](https://pica.zhimg.com/v2-1754a61110df2b907c669df929c2719c_1440w.jpg)
 setup&hold 时序分析
+
+# D-MUX 同步器
+
+[D-MUX](D-MUX.md)
