--- a/知识学习/计算机基础/数在计算机中的表示.md
+++ b/知识学习/计算机基础/数在计算机中的表示.md
@@ -8,6 +8,11 @@
 [IEEE 754 浮点数标准详解 - C 语言中文网](https://c.biancheng.net/view/314.html)
 [754-2019 - IEEE Standard for Floating-Point Arithmetic](https://doi.org/10.1109/IEEESTD.2019.8766229)
 [一文彻底掌握浮点数-知乎](https://zhuanlan.zhihu.com/p/674906821)
+[二进制之补码与小数](https://zhuanlan.zhihu.com/p/612510541)
+[小数表示法(定点法、浮点法) - 简书](https://www.jianshu.com/p/104f53c663c9)
+[计算机基础 - 负数的二进制表示 \| 苍梧之渊](https://ugnac.github.io/posts/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9F%BA%E7%A1%80-%E8%B4%9F%E6%95%B0%E7%9A%84%E4%BA%8C%E8%BF%9B%E5%88%B6%E8%A1%A8%E7%A4%BA/)
+[负数和小数点在计算机中的二进制表示 - 小康 kavin - 博客园](https://www.cnblogs.com/kw4310/p/13999902.html)
+[c 语言二进制如何表示小数点 \| PingCode 智库](https://docs.pingcode.com/baike/1098842)
 
 # 预备知识
 
@@ -52,6 +57,8 @@
 ### 补码
 
 补码是为了让符号位也作为数的一部分参与运算，将减法转换为加法，简化加减运算，**对于反码来说，其实可以以加法代替减法，但是会出现 0 的符号问题以及 0 的两个编码问题，补码则成功解决了该问题**
+
+负数的补码表示：负数加上$2^n$的无符号数二进制表示就是该负数的二进制表示
 
 对于正数，补码就是原码
 对于负数，补码则在反码基础上加 1
