--- a/记录/不了解&不熟悉的知识.md
+++ b/记录/不了解&不熟悉的知识.md
@@ -31,10 +31,40 @@
 
 # 心理学
 
-### 马太效应
+[心理学笔记](心理学笔记.md)
 
-马太效应（Matthew Effect），是指好的愈好，坏的愈坏，多的愈多，少的愈少的一种现象。即两极分化现象
-它描述了一种常见的社会心理现象，即优势往往会产生更多的优势
+# 缩写词
 
-[马太效应（一种常见的社会心理现象）\_百度百科](https://baike.baidu.com/item/%E9%A9%AC%E5%A4%AA%E6%95%88%E5%BA%94/70100)
-[马太效应 - 知乎](https://www.zhihu.com/topic/19574086/intro)
+### P.S.
+
+P.S.是 postscript 的缩写，解释为附言、后记
+
+[p.s.（postscript 的缩写）\_百度百科](https://baike.baidu.com/item/P.S./4552873)
+
+### SKU
+
+SKU（Stock Keeping Unit，库存单位）是现代零售和仓储管理中的一个重要概念，用于唯一标识商家库存中的每一种商品，其准确性和科学性对于商品管理、销售分析、库存优化等方面起着关键作用
+
+[深入解析 SKU 的组成架构](https://zhuanlan.zhihu.com/p/664344076)
+[电商开发：SPU、SKU、SKC、ARPU 分别代表的含义\_skc 电商是什么意思-CSDN 博客](https://blog.csdn.net/yangpit/article/details/82379227)
+
+### 需求架构：OR/DR
+
+OR：Offering Requirement，产品包需求
+DR：Design Requirement，设计需求
+DS: Design Specification，设计规格
+
+[规格中的 OR\DR\DS\RR\IR\PB\SF\SR\AR\CR](https://blog.csdn.net/zsqianqiu/article/details/125058243)
+
+### DFF
+
+D 触发器(DFF)
+
+[D 触发器 (D-FF)详解](https://zhuanlan.zhihu.com/p/603383032)
+
+### 时间单位
+
+h->m->s->ds($10^{-1}$s)->cs($10^{-2}$s)->ms($10^{-3}$s)->us($10^{-6}$s)->ns($10^{-9}$s)->ps($10^{-12}$s)->fs($10^{-15}$s)->as($10^{-18}$s)->zs($10^{-21}$s)->ys($10^{-24}$s)->普朗克时间($10^{-43}$s)
+
+时间单位：
+[时间单位\_百度百科](https://baike.baidu.com/item/%E6%97%B6%E9%97%B4%E5%8D%95%E4%BD%8D/3078999)
