--- a/记录/心理学笔记.md
+++ b/记录/心理学笔记.md
@@ -3,3 +3,18 @@
 # 罗生门效应
 
 指同一事件的不同目击者或当事人因主观立场、利益或认知差异，对事实提供相互矛盾且看似合理的描述，导致真相难以辨明的现象
+
+# 马太效应
+
+马太效应（Matthew Effect），是指好的愈好，坏的愈坏，多的愈多，少的愈少的一种现象。即两极分化现象
+它描述了一种常见的社会心理现象，即优势往往会产生更多的优势
+
+[马太效应（一种常见的社会心理现象）\_百度百科](https://baike.baidu.com/item/%E9%A9%AC%E5%A4%AA%E6%95%88%E5%BA%94/70100)
+[马太效应 - 知乎](https://www.zhihu.com/topic/19574086/intro)
+
+# 边际效应
+
+边际效应是指在心理活动中，随着某种刺激（如奖励、情感体验等）强度或频次的增加，其对个体的心理效用或感受的增量效应逐渐递减的现象。该效应反映了个体对重复性或持续性情境逐渐“适应”的过程，即对最初显著影响的感知逐渐减弱，从而形成一种“心理饱和”状态
+
+[边际效应\_百度百科](https://baike.baidu.com/item/%E8%BE%B9%E9%99%85%E6%95%88%E5%BA%94/555439)
+[边际效应——为什么“多”不一定是“好”？](https://zhuanlan.zhihu.com/p/28461033581)
